# makedeb-srcinfo

./: Cargo.toml  README.md  pyproject.toml  setup.cfg
.drone/: drone.jsonnet
makedeb_srcinfo/: __init__.py
src/: lib.rs  python.rs
tests/: parser.rs  version.rs
tests/files/: NO_VALUE.SRCINFO  VALID.SRCINFO
