[metadata]
name = makedeb-srcinfo
version = 0.1.0
author = makedeb Development Team
description = Python library to parse makedeb-styled SRCINFO files
project_urls =
	Bug Tracker = https://github.com/makedeb/makedeb-srcinfo
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: POSIX :: Linux

[options]
packages = find:
