[metadata]
name = makedeb-srcinfo
version = 0.2.0
author = makedeb Development Team
description = Python library to parse makedeb-styled SRCINFO files
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
	Bug Tracker = https://github.com/makedeb/makedeb-srcinfo
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: POSIX :: Linux

[options]
packages = find:
